Get build.py working with locally built Csound 7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -461,13 +461,14 @@ if(MSVC)
 
 elseif(APPLE)
     if(CabbagePro MATCHES 0)
-        set(CMAKE_OSX_DEPLOYMENT_TARGET "10.12" CACHE STRING "Minimum OS X deployment version" FORCE)
-        SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/Library/Frameworks/CsoundLib64")
-        find_library(CSOUND_LIBRARY NAMES CsoundLib64 HINTS /Library/Frameworks/CsoundLib64.framework/
-        "/Library/Frameworks/CsoundLib64.framework")  
-        include_directories("/Library/Frameworks/CsoundLib64.framework/Headers")
+        set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Minimum OS X deployment version" FORCE)
+        #SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/Users/andy/-/code/3rdparty/csound/.build")
+        #find_library(CSOUND_LIBRARY NAMES CsoundLib64 HINTS "/Users/andy/-/code/3rdparty/csound/.build/CsoundLib64.framework")
+        set(CSOUND_LIBRARY "/Users/andy/-/code/3rdparty/csound/.build/CsoundLib64.framework")
+        include_directories("/Users/andy/-/code/3rdparty/csound/.build/CsoundLib64.framework/Headers")
+        #message("CSOUND_LIBRARY = ${CSOUND_LIBRARY}")
     else()
-    set(CMAKE_OSX_DEPLOYMENT_TARGET "10.12" CACHE STRING "Minimum OS X deployment version" FORCE)
+    set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Minimum OS X deployment version" FORCE)
     SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/Volumes/SSD_Drive/Mac/csoundCabbagePro/csound/include")
     set(CSOUND_LIBRARY "/Volumes/SSD_Drive/Mac/csoundCabbagePro/csound/build/libCsoundLib64.a")  
     #  set(CSOUND_LIBRARY "/Users/rwalsh/sourcecode/csound/build/libCsoundLib64.a")  
