--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -461,18 +461,14 @@ if(MSVC)
 
 elseif(APPLE)
     if(CabbagePro MATCHES 0)
-        set(CMAKE_OSX_DEPLOYMENT_TARGET "10.12" CACHE STRING "Minimum OS X deployment version" FORCE)
-        SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/Library/Frameworks/CsoundLib64")
-        find_library(CSOUND_LIBRARY NAMES CsoundLib64 HINTS /Library/Frameworks/CsoundLib64.framework/
-        "/Library/Frameworks/CsoundLib64.framework")  
-        include_directories("/Library/Frameworks/CsoundLib64.framework/Headers")
+        set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Minimum OS X deployment version" FORCE)
+        set(CSOUND_LIBRARY "/Users/andy/Library/Frameworks/CsoundLib64.framework")
+        include_directories("/Users/andy/Library/Frameworks/CsoundLib64.framework/Headers")
     else()
         if("${PROJECT_NAME}" STREQUAL "Cabbage")
-            set(CMAKE_OSX_DEPLOYMENT_TARGET "10.12" CACHE STRING "Minimum OS X deployment version" FORCE)
-            SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/Library/Frameworks/CsoundLib64")
-            find_library(CSOUND_LIBRARY NAMES CsoundLib64 HINTS /Library/Frameworks/CsoundLib64.framework/
-            "/Library/Frameworks/CsoundLib64.framework")  
-            include_directories("/Library/Frameworks/CsoundLib64.framework/Headers")
+            set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Minimum OS X deployment version" FORCE)
+            set(CSOUND_LIBRARY "/Users/andy/Library/Frameworks/CsoundLib64.framework")
+            include_directories("/Users/andy/Library/Frameworks/CsoundLib64.framework/Headers")
         else()
             set(CMAKE_OSX_DEPLOYMENT_TARGET "10.12" CACHE STRING "Minimum OS X deployment version" FORCE)
             SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/Volumes/SSD_Drive/Mac/csoundCabbagePro/csound/include")
