Set Csound directories to installed Csound instead of built Csound

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -463,10 +463,9 @@ elseif(APPLE)
     if(CabbagePro MATCHES 0)
         set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Minimum OS X deployment version" FORCE)
         #SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/Users/andy/-/code/3rdparty/csound/.build")
-        #find_library(CSOUND_LIBRARY NAMES CsoundLib64 HINTS "/Users/andy/-/code/3rdparty/csound/.build/CsoundLib64.framework")
-        set(CSOUND_LIBRARY "/Users/andy/-/code/3rdparty/csound/.build/CsoundLib64.framework")
-        include_directories("/Users/andy/-/code/3rdparty/csound/.build/CsoundLib64.framework/Headers")
-        #message("CSOUND_LIBRARY = ${CSOUND_LIBRARY}")
+        #find_library(CSOUND_LIBRARY NAMES CsoundLib64 HINTS "/Users/andy/Library/Frameworks/CsoundLib64.framework")
+        set(CSOUND_LIBRARY "/Users/andy/Library/Frameworks/CsoundLib64.framework")
+        include_directories("/Users/andy/Library/Frameworks/CsoundLib64.framework/Headers")
     else()
     set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Minimum OS X deployment version" FORCE)
     SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/Volumes/SSD_Drive/Mac/csoundCabbagePro/csound/include")
