Get CMakeLists.txt working with locally built installed Csound

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -548,10 +548,8 @@ elseif(APPLE)
     set(WEBKIT "-framework WebKit -framework CoreServices")
     if(CabbagePro MATCHES 0)
         set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Minimum OS X deployment version" FORCE)
-        SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/Volumes/SSD_Drive/Mac/csound/build/CsoundLib64")
-        find_library(CSOUND_LIBRARY NAMES CsoundLib64 HINTS /Library/Frameworks/CsoundLib64.framework/
-        "/Volumes/SSD_Drive/Mac/csound/build/CsoundLib64.framework")  
-        include_directories("/Library/Frameworks/CsoundLib64.framework/Headers")
+        set(CSOUND_LIBRARY "/Users/andy/Library/Frameworks/CsoundLib64.framework")
+        include_directories("/Users/andy/Library/Frameworks/CsoundLib64.framework/Headers")
 
         target_link_libraries(${PROJECT_NAME} 
     PRIVATE
@@ -571,9 +569,8 @@ elseif(APPLE)
         juce::juce_recommended_warning_flags)
     else()
         set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Minimum OS X deployment version" FORCE)
-        SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/Volumes/SSD_Drive/Mac/csoundCabbagePro/csound/include")
-        set(CSOUND_LIBRARY "/Volumes/SSD_Drive/Mac/csoundCabbagePro/csound/build/libCsoundLib64.a")   
-        include_directories("/Volumes/SSD_Drive/Mac/csoundCabbagePro/csound/include")
+        set(CSOUND_LIBRARY "/Users/andy/Library/Frameworks/CsoundLib64.framework")
+        include_directories("/Users/andy/Library/Frameworks/CsoundLib64.framework/Headers")
         set(LIB_SNDFILE "/Volumes/SSD_Drive/Mac/libsndfile_uni/build/libsndfile.a")
         set(LIB_FLAC "/Users/rwalsh/sourcecode/xiph_libs/libFLAC.a")
         set(LIB_OGG "/Users/rwalsh/sourcecode/xiph_libs/libogg.a")
